--- a/server/public/styles/style.css
+++ b/server/public/styles/style.css
@@ -6,7 +6,6 @@ html, body
 
 .container {
 
-  /*display:table;*/
   width: 100%;
   height: 100%;
   margin-top: -50px;
@@ -23,7 +22,7 @@ html, body
 
 .searchDivContainer {
   background-color: WhiteSmoke;
-  height: 100%;
+  height: 2000px;
 }
 
 .movieImage {
@@ -32,7 +31,6 @@ html, body
 }
 
 .favoritesDivContainer {
-  /*background-color: WhiteSmoke;*/
   height: 100%;
 }
 
