--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -12,12 +12,10 @@
 
   </head>
   <body>
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12 header">
-          <h1><span class="glyphicon glyphicon-film" aria-hidden="true"></span>  Movie Search</h1>
-        </div>
+      <div class="col-md-12 fixed-top header">
+        <h1><span class="glyphicon glyphicon-film" aria-hidden="true"></span>  Movie Search</h1>
       </div>
+    <div class="container-fluid">
       <div class="row">
         <div class="searchDivContainer col-md-4">
           <div class="row">
@@ -46,18 +44,19 @@
           </div>
         </div>
         <div class="favoritesDivContainer col-md-8">
+
           <div class="favoritesDiv col-md-12" ng-controller="FavoritesController">
-            <div ng-repeat = "movie in favorites">
+            <div ng-repeat = "movie in favoritesObject.favorites">
               <div class="movieInfoInFavorites" >
                 <div class="imgInFavoritesDiv col-md-2">
-                  <img class="imgInFavorites" src="{{movie.response.data.Poster}}">
+                  <img class="imgInFavorites" src="{{movie.Poster}}">
                 </div>
                 <div class="infoInFavoritesDiv col-md-10">
-                  <h2>{{movie.response.data.Title + ' (' + movie.response.data.Year + ')'}}</h2>
-                  <p>{{movie.response.data.Plot}}</p>
-                  <p>Genre: {{movie.response.data.Genre}}</p>
-                  <p>Director: {{movie.response.data.Director}}</p>
-                  <p>Actors: {{movie.response.data.Actors}}</p>
+                  <h2>{{movie.Title + ' (' + movie.Year + ')'}}</h2>
+                  <p>{{movie.Plot}}</p>
+                  <p>Genre: {{movie.Genre}}</p>
+                  <p>Director: {{movie.Director}}</p>
+                  <p>Actors: {{movie.Actors}}</p>
                 </div>
               </div>
 
