finished delete functionality

--- a/client/views/index.html
+++ b/client/views/index.html
@@ -57,6 +57,7 @@
                   <p>Genre: {{movie.Genre}}</p>
                   <p>Director: {{movie.Director}}</p>
                   <p>Actors: {{movie.Actors}}</p>
+                  <button type="button" ng-click="deleteFavorite(movie)">Remove from favorites</button>
                 </div>
               </div>
 
