--- a/server/public/styles/style.css
+++ b/server/public/styles/style.css
@@ -1,16 +1,13 @@
-html, body
-{
+html, body {
     height: 100%;
     width: 100%;
+    margin: 0;
+    overflow: hidden;
 }
 
 .container {
-
   width: 100%;
   height: 100%;
-  margin-top: -50px;
-  padding: 50px 0 0 0; /*set left/right padding according to needs*/
-
 }
 
 .header {
@@ -20,9 +17,43 @@ html, body
   height: 55px;
 }
 
+@media (max-width: 600px) {
+  html, body
+  {
+      height: 100%;
+      width: 100%;
+      margin: 0;
+      overflow-y: scroll;
+  }
+
+  .searchDivContainer {
+    height: 100%;
+    background-color: WhiteSmoke;
+  }
+}
+
+@media screen and (min-width: 767px){
+
+  .searchDivContainer {
+    height: 2000px;
+    background-color: WhiteSmoke;
+  }
+
+  .favoritesDivContainer {
+    margin-top: 55px;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    overflow-y: scroll;
+    width: 69.9%;
+  }
+}
+
 .searchDivContainer {
   background-color: WhiteSmoke;
   height: 2000px;
+  /*height: 100%;*/
 }
 
 .inputArea {
@@ -40,7 +71,9 @@ html, body
 }
 
 .favoritesDivContainer {
-  height: 100%;
+  height: 90%;
+  padding-left: 25px;
+  overflow-y: scroll;
 }
 
 .imgInFavoritesDiv {
@@ -53,7 +86,7 @@ html, body
 }
 
 .movieInfoInFavorites {
-  padding-top: 20px;
+  padding-top: 5px;
 }
 
 h1 {
